--- a/src/index.html
+++ b/src/index.html
@@ -22,16 +22,16 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main class="main">
+    <!-- <main class="main">
       <include src="./partials/hero.html"></include>
       <include src="./partials/benefits.html"></include>
       <include src="./partials/ingredients.html"></include>
       <include src="./partials/proces.html"></include>
-      <include src="./partials/product.html"></include>
+      <include src="./partials/product.html"></include> -->
       <include src="./partials/sellers.html"></include>
-      <include src="./partials/reviews.html"></include>
-      <include src="./partials/social.html"></include>
+      <!-- <include src="./partials/reviews.html"></include>
+      <include src="./partials/social.html"></include> -->
     </main>
-    <include src="./partials/footer.html"></include>
+    <!-- <include src="./partials/footer.html"></include> -->
   </body>
 </html>
