--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap"
       rel="stylesheet"
     />
@@ -33,5 +37,7 @@
       <include src="./partials/social.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/reviews-slider.js" type="module"></script>
   </body>
 </html>
