--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
   </body>
 </html>
