--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <include src="./partials/proces.html"></include>
       <include src="./partials/product.html"></include>
       <include src="./partials/sellers.html"></include>
-      <!-- <include src="./partials/reviews.html"></include> -->
+      <include src="./partials/reviews.html"></include>
       <include src="./partials/social.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
