rework menu functions

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap"
       rel="stylesheet"
@@ -26,7 +26,7 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <include src="./partials/menu.html"></include>
+    <include src="./partials/burger-menu.html"></include>
     <main class="main">
       <include src="./partials/hero.html"></include>
       <include src="./partials/benefits.html"></include>
