--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chocolate</title>
-    <link rel="icon"  type="image/svg+xml" href="./images/icons/favicon/chocolate.svg">
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./images/icons/favicon/chocolate.svg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +26,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet" />
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -43,5 +48,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
+    <script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
   </body>
 </html>
