--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
       <include src="./partials/social.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/review-modal.html"></include>
+
     <script src="./js/burger-menu.js"></script>
+    <script src="./js/review-modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
