--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,11 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/review-modal.html"></include>
-    <script src="./js/burger-menu.js"></script>
-    <script src="./js/review-modal.js"></script>
+    <include src="./partials/scroll-to-top.html"></include>
+
+    <script src="./js/scroll-to-top.js"></script>
+    <script src="./js/burger-menu.js" defer></script>
+    <script src="./js/review-modal.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
