--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,10 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <include src="./partials/burger-menu.html"></include>
+    <!-- <include src="./partials/burger-menu.html"></include> -->
     <main class="main">
       <include src="./partials/hero.html"></include>
+      <include src="./partials/buy-now.html"></include>
       <include src="./partials/benefits.html"></include>
       <include src="./partials/ingredients.html"></include>
       <include src="./partials/proces.html"></include>
@@ -45,6 +46,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./js/burger-menu.js"></script>
+    <script src="./js/buy-modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
