--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <!-- <include src="./partials/burger-menu.html"></include> -->
+    <include src="./partials/burger-menu.html"></include>
     <main class="main">
       <include src="./partials/hero.html"></include>
       <include src="./partials/buy-now.html"></include>
@@ -47,11 +47,12 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/review-modal.html"></include>
     <include src="./partials/scroll-to-top.html"></include>
+    <include src="./partials/buy-now.html"></include>
 
     <script src="./js/scroll-to-top.js"></script>
     <script src="./js/burger-menu.js" defer></script>
     <script src="./js/review-modal.js" defer></script>
-
+    <script src="./js/buy-modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
