--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,13 @@
     <include src="./partials/review-modal.html"></include>
     <include src="./partials/scroll-to-top.html"></include>
     <include src="./partials/buy-now.html"></include>
+    <include src="./partials/subscribe-modal.html"></include>
 
     <script src="./js/scroll-to-top.js"></script>
     <script src="./js/burger-menu.js" defer></script>
     <script src="./js/review-modal.js" defer></script>
     <script src="./js/buy-modal.js"></script>
+    <script src="./js/subscribe-modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/products-slider.js" type="module"></script>
     <script src="./js/reviews-slider.js" type="module"></script>
