--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
     <include src="./partials/subscribe-modal.html"></include>
 
     <script src="./js/scroll-to-top.js"></script>
-    <script src="./js/burger-menu.js" defer></script>
-    <script src="./js/review-modal.js" defer></script>
+    <script src="./js/burger-menu.js"></script>
+    <script src="./js/review-modal.js"></script>
     <script src="./js/buy-modal.js"></script>
     <script src="./js/subscribe-modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
